fixed home page issues and search layout issues

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,7 +10,7 @@
     Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   float: right;
-  color: #f2f2f27c;
+  color: #ffffff;
   text-align: center;
   text-decoration: none;
   justify-content: space-between;
@@ -31,16 +31,16 @@
 
 .button3 {
   position: absolute;
-  top: 65%;
+  top: 62.7%;
   left: 45%;
   font-size: medium;
 }
-a.button3{
+a.button3 {
   margin-top: 265;
-  display:inline-block;
-  padding:1.3em 1.2em;
-  /* margin:0 1.3em 0.3em 0; */
-  border-radius:2em;
+  display: inline-block;
+  padding: 1.3em 1.2em;
+  margin: 0 1.3em 0.3em 0;
+  border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
@@ -70,5 +70,12 @@ header {
   padding-top: 140px;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
-  color: rgba(202, 198, 198, 0.791);
+  color: rgba(184, 184, 184, 0.705);
+}
+
+#example10 {
+  color: white;
+  font-size: 110px;
+  -webkit-text-stroke: 1px #f8f8f8;
+  text-shadow: 0px 2px 4px#4eb5f1;
 }
